--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^3.0.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.16",
+    "mongoose-int32": "^0.3.1",
     "morgan": "^1.9.0",
     "request": "^2.85.0"
   }
